--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,8 +2,9 @@
 <body>
 
 <% @movies.each do |movie| %>
-    <ul><li> <%= movie %> </li></ul>
+ <ul><li> <%= movie %> </li></ul>
 <% end %>
 
+<h1>movies review</h1>
 </body>
 </html>
